# MI

./: .gitignore  LICENSE  README.md  implementation_plan.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: fidelity_results_20260506_182838.csv  fidelity_results_20260506_182838.json  fidelity_results_latest.csv  fidelity_results_latest.json
configs/: hardware.yaml  quantization.yaml  zscore_thresholds.yaml
dashboards/: __init__.py  app.py  backend.py  callbacks.py  layout.py  stylesheet.py
scripts/: run_fidelity_benchmark.py  run_full_pipeline.py
src/: __init__.py
src/circuitlens/: __init__.py  clustering.py  jaccard.py  jacobian.py
src/hardware/: __init__.py  monitor.py  vram_manager.py
src/reip/: __init__.py  backward_hooks.py  lrp_rules.py  pipeline.py  pruning.py
src/weightlens/: __init__.py  cache.py  lemmatizer.py  projection.py  transcoder_loader.py
tests/: __init__.py  ablation_scoring.py  benchmark_fidelity.py  conftest.py  test_circuitlens.py  test_fade.py  test_lrp_rules.py  test_pruning_topology.py  test_reip_ioi.py  test_reip_scaffold.py  test_weightlens.py
tests/integration/: test_reip_real_model.py
