[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mi-toolkit"
version = "0.1.0"
description = "Lightweight Mechanistic Interpretability Analysis Toolkit: Automated Neural Circuit Discovery via ReIP, WeightLens, and CircuitLens"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = [
    "mechanistic interpretability",
    "neural circuits",
    "LRP",
    "attribution patching",
    "transformer",
    "explainability",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core deep learning
    "torch>=2.1.0",
    "transformer-lens>=1.19.0",
    # Scientific computing
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    # NLP
    "spacy>=3.7.0",
    # Graph analysis
    "networkx>=3.2.0",
    # Visualization
    "dash>=2.14.0",
    "dash-cytoscape>=0.3.0",
    "plotly>=5.17.0",
    # API server
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    # Utilities
    "pyyaml>=6.0.1",
    "tqdm>=4.66.0",
    "huggingface-hub>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.10.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
]
quantization = [
    "bitsandbytes>=0.41.0",
]
monitoring = [
    "pynvml>=11.5.0",
    "psutil>=5.9.0",
]
all = [
    "mi-toolkit[dev,quantization,monitoring]",
]

[project.scripts]
mi-dashboard = "dashboards.app:main"

[project.urls]
Repository = "https://github.com/rocky59487/MI"
Documentation = "https://github.com/rocky59487/MI/blob/main/README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "dashboards*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: mark test as slow (requires GPU or model download)",
    "integration: mark test as integration test (requires real model)",
    "gpu: mark test as requiring CUDA GPU",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501", "N802", "N806"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = false
